<resources>
    <string name="app_name">newCarpark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Car Park</string>
    <string name="emptyText">Empty</string>
    <string name="updateText">Update</string>
    <string name="deleteText">Delete</string>
    <string name="ownerName">Owner name</string>
    <string name="carNumber">Car number</string>
    <string name="carBrand">Car brand</string>
    <string name="loginText">Login</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint" />
    <string name="passHint">Password</string>
    <string name="logoutText">Logout</string>
</resources>
